--- a/package.json
+++ b/package.json
@@ -9,12 +9,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "algoliasearch": "^4.13.1",
-    "axios": "^0.18.0",
+    "algoliasearch": "^4.14.3",
+    "axios": "^1.3.3",
     "commander": "^2.20.0",
     "config-yml": "^0.10.3",
-    "dotenv": "10",
-    "shelljs": "^0.8.3"
+    "dotenv": "^16",
+    "shelljs": "^0.8.5"
   },
   "bin": {
     "templates": "bin/index.js"
